[package]
name = "bvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.1"
ureq = "2.9.1"
dirs = "5.0.1"
zip = "0.6.6"
flate2 = "1.0.28"
